// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:accent-bar 1`] = `
"<section class="container-tip container-tip--accent-bar" style="background-color:#eef6ef;padding:12px 16px;border-radius:16px 4px 16px 4px;box-shadow:0 2px 6px rgba(0,0,0,0.04);margin:16px 0">
<section class="container-tip__title" style="font-size:14px;font-weight:700;color:#147a44;margin-bottom:6px;letter-spacing:0.3px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#147a44" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#147a44"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#147a44"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:card-shadow 1`] = `
"<section class="container-tip container-tip--card-shadow" style="background-color:#fdfdfc;border-top:2px solid #147a44;padding:16px;margin:18px 0;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.06)">
<section class="container-tip__title" style="font-weight:700;color:#147a44;margin-bottom:8px;font-size:15px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#147a44" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#147a44"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#147a44"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:minimal-underline 1`] = `
"<section class="container-tip container-tip--minimal-underline" style="padding:4px 0 4px 12px;margin:14px 0;border-left:2px solid #147a44">
<section class="container-tip__title" style="display:inline-block;font-size:14px;color:#147a44;font-weight:700;padding-bottom:2px;border-bottom:1px solid #147a44;margin-bottom:8px;letter-spacing:0.5px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#147a44" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#147a44"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#147a44"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:pill-tag 1`] = `
"<section class="container-tip container-tip--pill-tag" style="background-color:#eef6ef;border:1px solid #147a44;padding:24px 16px 16px;border-radius:6px;margin:24px 0 16px">
<section class="container-tip__title" style="display:inline-block;padding:3px 12px;background-color:#147a44;color:#fefefe;border-radius:12px;font-size:13px;font-weight:700;margin-top:-34px;margin-bottom:10px;letter-spacing:0.4px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#147a44" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#147a44"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#147a44"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:terminal 1`] = `
"<section class="container-tip container-tip--terminal" style="background-color:#1f2937;padding:0;margin:18px 0;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.18)">
<section style="background-color:#2d3748;padding:8px 14px;border-bottom:1px solid #111827;border-radius:6px 6px 0 0;color:#e5e7eb;font-weight:600;font-size:13px;letter-spacing:0.4px"><svg viewBox="0 0 54 14" width="42" height="11" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 10px"><circle cx="7" cy="7" r="5" fill="#ff5f56"></circle><circle cx="22" cy="7" r="5" fill="#ffbd2e"></circle><circle cx="37" cy="7" r="5" fill="#27c93f"></circle></svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:ticket-notch 1`] = `
"<section class="container-tip container-tip--ticket-notch" style="background-color:#eef6ef;border:1px dashed #147a44;border-left:2px dotted #147a44;border-right:2px dotted #147a44;padding:16px 20px;margin:18px 0;border-radius:3px">
<section style="text-align:center;margin-bottom:4px"><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#147a44"></circle></svg><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#147a44"></circle></svg><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#147a44"></circle></svg></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > announcement:ai-notice 1`] = `
"<section class="container-announcement container-announcement--ai-notice" style="border-left: 4px solid #b42318; color: #1c1f24; background-color: #eceae4; border: 1.5px solid #b42318; border-radius: 12px; padding: 10px 16px; margin: 18px 0;">
<section style="display:table;width:100%"><span style="display:table-cell;vertical-align:middle;width:32px;padding-right:10px"><svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#b42318" stroke-width="1.5" stroke-linecap="round"><rect x="5" y="5" width="14" height="14" rx="2" fill="#eceae4"></rect><rect x="8.5" y="8.5" width="3" height="3" fill="#b42318" stroke="none"></rect><rect x="12.5" y="8.5" width="3" height="3" fill="#b42318" stroke="none"></rect><rect x="8.5" y="12.5" width="3" height="3" fill="#b42318" stroke="none"></rect><rect x="12.5" y="12.5" width="3" height="3" fill="#b42318" stroke="none"></rect><path d="M9 5 V2 M15 5 V2 M9 22 V19 M15 22 V19 M5 9 H2 M5 15 H2 M22 9 H19 M22 15 H19"></path></svg></span><span style="display:table-cell;vertical-align:middle"><section style="font-weight:700;font-size:13px;color:#636870;letter-spacing:0.3px;line-height:1.4">测试通告</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > announcement:danger-bar 1`] = `
"<section class="container-announcement container-announcement--danger-bar" style="border: 1px solid #b42318; color: #1c1f24; background-color: #fbecea; border-left: 4px solid #b42318; border-radius: 6px; padding: 14px 16px; margin: 20px 0;">
<section class="container-announcement__title" style="color:#b42318;font-weight:700;font-size:15px;letter-spacing:0.5px;margin-bottom:6px">测试通告</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > announcement:mono-disclaimer 1`] = `
"<section class="container-announcement container-announcement--mono-disclaimer" style="border-left: 4px solid #b42318; color: #1c1f24; background-color: transparent; border: 1px solid #b42318; padding: 12px 16px; margin: 18px 0; border-radius: 0;">
<section class="container-announcement__title" style="color:#636870;font-size:11px;font-weight:700;letter-spacing:0.18em;text-transform:uppercase;border-bottom:1px solid #d8d8d4;padding-bottom:6px;margin-bottom:8px">测试通告</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > announcement:stamped-banner 1`] = `
"<section class="container-announcement container-announcement--stamped-banner" style="border-left: 4px solid #b42318; border: 1px solid #b42318; color: #1c1f24; background-color: #fbecea; border-top: 3px solid #b42318; padding: 14px 16px; margin: 20px 0; border-radius: 0 0 4px 4px;">
<section style="display:table;width:100%;table-layout:fixed;margin-bottom:8px"><span style="display:table-cell;vertical-align:middle;width:78%"><section style="font-weight:700;font-size:16px;color:#b42318;margin-bottom:6px;line-height:1.4">测试通告</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:column-card 1`] = `
"<section class="container-compare container-compare--column-card" style="display: table; width: 100%; table-layout: fixed; border-spacing: 4px 0; border-collapse: separate; margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#147a44;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:data-card 1`] = `
"<section class="container-compare container-compare--data-card" style="display: table; width: 100%; table-layout: fixed; border-spacing: 8px 0; border-collapse: separate; margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#147a44;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:ledger 1`] = `
"<section class="container-compare container-compare--ledger" style="display: table; width: 100%; table-layout: fixed; border-spacing: 0; border-collapse: separate; margin: 16px 0; border: 1px solid #d8d8d4; border-radius: 6px;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#147a44;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:stacked-row 1`] = `
"<section class="container-compare container-compare--stacked-row" style="margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#147a44;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > dialogue:chat-bubbles 1`] = `
"<section class="container-dialogue container-dialogue--chat-bubbles" style="margin: 20px 0; margin: 20px 0; padding: 14px 16px; background-color: transparent;">
<section class="container-dialogue__title" style="font-weight:700;color:#1c1f24;font-size:14px;letter-spacing:0.5px;margin-bottom:12px">主编访谈</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > dialogue:interview-column 1`] = `
"<section class="container-dialogue container-dialogue--interview-column" style="margin: 20px 0; margin: 24px 0; padding: 0; background-color: transparent;">
<section class="container-dialogue__title" style="font-weight:700;color:#1c1f24;font-size:14px;letter-spacing:0.5px;margin-bottom:12px">主编访谈</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > dialogue:name-prefix 1`] = `
"<section class="container-dialogue container-dialogue--name-prefix" style="margin: 20px 0; margin: 20px 0; background-color: transparent;">
<section class="container-dialogue__title" style="font-weight:700;color:#1c1f24;font-size:14px;letter-spacing:0.5px;margin-bottom:12px">主编访谈</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > dialogue:qa-rows 1`] = `
"<section class="container-dialogue container-dialogue--qa-rows" style="margin: 20px 0; margin: 20px 0; padding: 14px 16px; background-color: transparent;">
<section class="container-dialogue__title" style="font-weight:700;color:#1c1f24;font-size:14px;letter-spacing:0.5px;margin-bottom:12px">主编访谈</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:dots 1`] = `
"<section class="container-divider container-divider--dots" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 8" width="220" height="8" xmlns="http://www.w3.org/2000/svg"> <circle cx="96" cy="4" r="2" fill="#d8d8d4"></circle> <circle cx="120" cy="4" r="2" fill="#d8d8d4"></circle> <circle cx="144" cy="4" r="2" fill="#d8d8d4"></circle> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:flower 1`] = `
"<section class="container-divider container-divider--flower" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 10" width="220" height="10" xmlns="http://www.w3.org/2000/svg"> <line x1="0" y1="5" x2="110" y2="5" stroke="#d8d8d4" stroke-width="1"></line> <line x1="130" y1="5" x2="240" y2="5" stroke="#d8d8d4" stroke-width="1"></line> <circle cx="120" cy="5" r="3" fill="#2558b0"></circle> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:glyph 1`] = `
"<section class="container-divider container-divider--glyph" style="text-align:center;margin:26px 0;color:#2558b0;font-size:18px">
<span style="display:inline-block;width:60px;height:1px;background-color:#d8d8d4;vertical-align:middle;margin-right:12px"></span><span style="display:inline-block;vertical-align:middle">◆</span><span style="display:inline-block;width:60px;height:1px;background-color:#d8d8d4;vertical-align:middle;margin-left:12px"></span>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:rule 1`] = `
"<section class="container-divider container-divider--rule" style="margin:24px 0">
<hr style="margin-top: 24px; margin-bottom: 24px; border: none; height: 1px; background-color: #d8d8d4; margin: 0;">
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:wave 1`] = `
"<section class="container-divider container-divider--wave" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 12" width="220" height="12" xmlns="http://www.w3.org/2000/svg"> <path d="M0,6 Q15,0 30,6 T60,6 T90,6 T120,6 T150,6 T180,6 T210,6 T240,6" fill="none" stroke="#d8d8d4" stroke-width="1.2"></path> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > gallery:duo 1`] = `
"<section class="container-gallery container-gallery--duo" style="margin: 20px 0;">
<section class="container-gallery__title" style="font-weight:700;color:#1c1f24;font-size:13px;letter-spacing:0.5px;margin-bottom:8px">春夏秋冬</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > gallery:nine-grid 1`] = `
"<section class="container-gallery container-gallery--nine-grid" style="margin: 20px 0;">
<section class="container-gallery__title" style="font-weight:700;color:#1c1f24;font-size:13px;letter-spacing:0.5px;margin-bottom:8px">春夏秋冬</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > gallery:ribbon-strip 1`] = `
"<section class="container-gallery container-gallery--ribbon-strip" style="margin: 20px 0; overflow-x: auto; white-space: nowrap; -webkit-overflow-scrolling: touch; box-shadow: inset -14px 0 10px -10px rgba(0,0,0,0.28); border-radius: 4px;">
<section class="container-gallery__title" style="font-weight:700;color:#1c1f24;font-size:13px;letter-spacing:0.5px;margin-bottom:8px">春夏秋冬</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > gallery:triptych 1`] = `
"<section class="container-gallery container-gallery--triptych" style="margin: 20px 0;">
<section class="container-gallery__title" style="font-weight:700;color:#1c1f24;font-size:13px;letter-spacing:0.5px;margin-bottom:8px">春夏秋冬</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > pullQuote:centered-rule 1`] = `
"<section class="container-pull-quote container-pull-quote--centered-rule" style="margin: 28px 0; border-top: 1px solid #2558b0; border-bottom: 1px solid #2558b0; padding: 24px 12px; text-align: center; border-radius: 0; background-color: transparent;">
<section style="text-align:center;margin-bottom:10px"><span style="display:inline-block;color:#636870;font-size:11px;font-weight:700;letter-spacing:0.35em;text-transform:uppercase;line-height:1.4">QUOTE · 引言</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > pullQuote:giant-mark 1`] = `
"<section class="container-pull-quote container-pull-quote--giant-mark" style="margin: 28px 0; padding: 8px 4px 8px 16px; text-align: left;">
<section style="line-height:0;margin-bottom:4px"><svg width="64" height="48" viewBox="0 0 80 60" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#2558b0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 40 C14 22 22 14 32 12 M14 40 L14 50 L26 50 L26 36 L18 36 L18 40 Z"></path><path d="M44 40 C44 22 52 14 62 12 M44 40 L44 50 L56 50 L56 36 L48 36 L48 40 Z"></path></svg></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > pullQuote:margin-pull 1`] = `
"<section class="container-pull-quote container-pull-quote--margin-pull" style="margin: 28px 0; padding: 14px 4px 14px 0; border-left: 1px solid #d8d8d4; background-color: transparent;">
<section style="display:table;width:100%"><section style="display:table-cell;vertical-align:top;width:56px;padding-top:2px"><svg width="24" height="72" viewBox="0 0 24 72" xmlns="http://www.w3.org/2000/svg"><text x="12" y="64" font-size="11" font-weight="700" fill="#2558b0" text-anchor="start" transform="rotate(-90 12 64)" font-family="monospace" letter-spacing="3">QUOTE</text></svg></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > pullQuote:stamp-quote 1`] = `
"<section class="container-pull-quote container-pull-quote--stamp-quote" style="margin: 28px 0; border-top: 2px solid #1c1f24; border-bottom: 2px solid #1c1f24; padding: 18px 4px; background-color: transparent;">
<section style="display:table;width:100%"><section style="display:table-cell;vertical-align:middle;color:#1c1f24;font-size:19px;line-height:1.5;font-weight:700;letter-spacing:0.2px;text-align:left">——</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:classic 1`] = `
"<section class="container-quote-card container-quote-card--classic" style="background-color: #f5f5f3; padding: 18px 16px; margin: 20px 0; border-radius: 8px;">
<span style="display:inline-block;font-size:28px;line-height:1;opacity:0.35;margin-right:4px">「</span>
<section class="container-quote-card__body" style="font-size:16px;line-height:1.7;text-align:center">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
<span style="display:inline-block;font-size:28px;line-height:1;opacity:0.35;margin-left:4px">」</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:column-rule 1`] = `
"<section class="container-quote-card container-quote-card--column-rule" style="background-color: #f5f5f3; border-radius: 6px; padding: 18px 28px; margin: 22px 12px; border-left: 3px solid #2558b0; border-right: 3px solid #2558b0;">
<section class="container-quote-card__body" style="font-size:16px;line-height:1.85;text-align:center;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:frame-brackets 1`] = `
"<section class="container-quote-card container-quote-card--frame-brackets" style="background-color: #f5f5f3; border-radius: 6px; padding: 26px 22px; margin: 22px 0;">
<svg viewBox="0 0 320 120" width="100%" height="120" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display: block; margin-bottom: -120px"><path d="M0,20 L0,0 L20,0 M300,0 L320,0 L320,20 M0,100 L0,120 L20,120 M300,120 L320,120 L320,100" stroke="#2558b0" stroke-width="2" fill="none"></path></svg>
<section class="container-quote-card__body" style="font-size:16px;line-height:1.85;text-align:center;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:left-bar 1`] = `
"<section class="container-quote-card container-quote-card--left-bar" style="background-color: #f5f5f3; border-radius: 6px; padding: 10px 0 10px 18px; margin: 20px 0; border-left: 4px solid #1c1f24;">
<section class="container-quote-card__body" style="font-size:18px;line-height:1.7;text-align:left;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:bordered 1`] = `
"<section class="container-section-title container-section-title--bordered" style="margin: 24px 0 12px; padding-bottom: 6px; border-bottom: 2px solid #2558b0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24"><svg viewBox="0 0 14 14" width="12" height="12" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <path d="M1,1 L13,1 M1,1 L1,13" fill="none" stroke="#2558b0" stroke-width="2" stroke-linecap="square"></path> </svg>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:cornered 1`] = `
"<section class="container-section-title container-section-title--cornered" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 24px 0 12px;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24"><svg viewBox="0 0 14 14" width="12" height="12" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <path d="M1,1 L13,1 M1,1 L1,13" fill="none" stroke="#2558b0" stroke-width="2" stroke-linecap="square"></path> </svg>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:kicker-stack 1`] = `
"<section class="container-section-title container-section-title--kicker-stack" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 26px 0 12px; padding: 0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24;line-height:1.35"><span style="display:block;width:24px;height:2px;background:#2558b0;margin-bottom:8px"></span>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:number-prefix 1`] = `
"<section class="container-section-title container-section-title--number-prefix" style="padding-bottom: 6px; margin: 28px 0 14px; padding: 0 0 6px; border-bottom: 1px solid #d8d8d4;">
<section class="container-section-title__label" style="font-weight: 700; font-size: 21px; color: #1c1f24; letter-spacing: -0.2px">章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:ribbon-stamp 1`] = `
"<section class="container-section-title container-section-title--ribbon-stamp" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 24px 0 12px; padding: 0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24;vertical-align:middle;line-height:1.4"><span style="display:inline-block;min-width:20px;padding:1px 6px;margin-right:10px;background:#2558b0;color:#fefefe;font-weight:700;font-size:14px;text-align:center;vertical-align:middle">§</span>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:number-circle 1`] = `
"<section class="container-steps container-steps--number-circle" style="margin: 16px 0;">
<section class="container-steps__title" style="font-weight:700;margin-bottom:12px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:ribbon-chain 1`] = `
"<section class="container-steps container-steps--ribbon-chain" style="margin: 18px 0; padding: 8px 0 8px 18px; border-left: 4px solid #2558b0;">
<section class="container-steps__title" style="display:inline-block;padding:4px 12px;background-color:#2558b0;color:#fefefe;border-radius:12px;font-weight:700;font-size:13px;margin:0 0 12px -30px;letter-spacing:0.4px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:split-row 1`] = `
"<section class="container-steps container-steps--split-row" style="margin: 18px 0; padding: 8px 0 8px 16px; border-left: 4px solid #2558b0; box-shadow: inset 1px 0 0 #d8d8d4;">
<section class="container-steps__title" style="font-weight:700;font-size:14px;color:#636870;text-transform:uppercase;letter-spacing:1px;margin-bottom:8px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:step-card 1`] = `
"<section class="container-steps container-steps--step-card" style="margin: 18px 0; padding: 14px 0 4px; border-top: 1px solid #d8d8d4;">
<section class="container-steps__title" style="font-weight:700;font-size:14px;color:#636870;letter-spacing:0.5px;text-transform:uppercase;margin-bottom:10px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:timeline-dot 1`] = `
"<section class="container-steps container-steps--timeline-dot" style="margin: 18px 0; padding: 4px 0 4px 20px; border-left: 2px dotted #2558b0;">
<svg viewBox="0 0 10 10" width="10" height="10" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 8px; margin-left: -16px"><circle cx="5" cy="5" r="4" fill="#2558b0"></circle></svg>
<section class="container-steps__title" style="font-weight:700;color:#2558b0;margin-bottom:10px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > tableCard:key-value 1`] = `
"<section class="container-table-card container-table-card--key-value" style="margin: 20px 0; border-top: 1px solid #d8d8d4; margin: 18px 0;">
<section class="container-table-card__title" style="font-weight:700;font-size:13px;color:#1c1f24;letter-spacing:0.5px;margin-bottom:8px">规格对比</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > tableCard:price-tier 1`] = `
"<section class="container-table-card container-table-card--price-tier" style="margin: 20px 0; margin: 18px 0;">
<section class="container-table-card__title" style="font-weight:700;font-size:13px;color:#1c1f24;letter-spacing:0.5px;margin-bottom:8px">规格对比</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > tableCard:rule-grid 1`] = `
"<section class="container-table-card container-table-card--rule-grid" style="margin: 20px 0; border: 1px solid #d8d8d4; border-radius: 4px; overflow: hidden; margin: 18px 0;">
<section class="container-table-card__title" style="font-weight:700;font-size:13px;color:#1c1f24;letter-spacing:0.5px;margin-bottom:8px">规格对比</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > tableCard:zebra-rows 1`] = `
"<section class="container-table-card container-table-card--zebra-rows" style="margin: 20px 0; border-top: 1px solid #1c1f24; border-bottom: 1px solid #1c1f24; margin: 18px 0;">
<section class="container-table-card__title" style="font-weight:700;font-size:13px;color:#1c1f24;letter-spacing:0.5px;margin-bottom:8px">规格对比</section>"
`;
